...
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSlotsEventText" />

    <TextView
        android:id="@+id/dueTimeEventView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:text="Click below"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@id/dueTimeEventText"
        app:layout_constraintTop_toBottomOf="@+id/timeSlotsEventButton" />

    <EditText
        android:id="@+id/nameEventView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:hint="Click to type"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/nameEventText"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/statusPublicSpinner"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/statusPublicEventText"
...
        android:hint="Click to type"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/typeEventText"
        app:layout_constraintTop_toBottomOf="@+id/statusPublicSpinner" />

    <EditText
        android:id="@+id/descriptionEventView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:hint="Click to type"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/descriptionEventText"
        app:layout_constraintTop_toBottomOf="@+id/typeEventView" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/locationEventSearch"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        app:iconifiedByDefault="false"
...
        android:textColor="#990000"
        android:backgroundTint="#FFCC00"
        app:layout_constraintStart_toEndOf="@+id/timeSlotsEventText"
        app:layout_constraintTop_toBottomOf="@+id/locationEventSearch" />

    <Button
        android:id="@+id/dateTimeSet"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="Set Time"
        android:textColor="#990000"
        android:backgroundTint="#FFCC00"
...
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueTimeEventText" />

    <TextView
        android:id="@+id/inviteSearchDisplayButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:padding="2dp"
        android:ems="10"
        android:textColor="#000000"
...
        android:visibility="gone"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:background="#f0f0f0"
        app:layout_constraintStart_toEndOf="@+id/invitedUsersEventText"
        app:layout_constraintTop_toBottomOf="@+id/inviteEventSearch" />

    <TextView
        android:id="@+id/invitedUsersEventText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
...
        android:textSize="20sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteEventText" />

    <Button
        android:id="@+id/viewInvitedUsersButton"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="View"
        android:textColor="#990000"
...
        app:layout_constraintStart_toEndOf="@+id/inviteEventText"
        app:layout_constraintTop_toBottomOf="@+id/dateTimeSet"
        />


    <Button
        android:id="@+id/saveEventButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#FFCC00"
        android:text="Edit!"
        android:gravity="center"
...
