...
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/nameDetailsView"
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Event Title"
        android:textAlignment="center"
        android:textColor="#FFCC00"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/statusPublicDetailsView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDetailsView" />

    <TextView
        android:id="@+id/descriptionDetailsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textAlignment="center"
...
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/typeDetailsText"
        app:layout_constraintTop_toBottomOf="@+id/ownerDetailsView" />

    <TextView
        android:id="@+id/locationDetailsView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/invitedUsersDetailsText"
        app:layout_constraintTop_toBottomOf="@+id/finalTimeDetailsText" />

    <TextView
        android:id="@+id/participantsDetailsView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/participantsDetailsText"
        app:layout_constraintTop_toBottomOf="@+id/invitedUsersDetailsView" />

    <Button
        android:id="@+id/editEventButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFCC00"
        android:text="Edit Event"
        android:textColor="#990000"
...
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantsDetailsView">

        <Button
            android:id="@+id/acceptInviteButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFCC00"
            android:text="Accept"
            android:textColor="#990000"
            android:onClick="onClickAccept"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/rejectInviteButton"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FFCC00"
            android:text="Reject"
            android:textColor="#990000"
...
        android:textColor="#990000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFCC00"
        android:text="Withdraw"
        android:textColor="#990000"
...
