...
        android:textColor="#FFCC00"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneProfileText" />

    <TextView
        android:id="@+id/nameProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textColor="#FFFFFF"
...
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/nameProfileText"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:layout_editor_absoluteY="190dp" />

    <TextView
        android:id="@+id/userIDProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/userIDProfileText"
        app:layout_constraintTop_toBottomOf="@+id/nameProfileView" />

    <TextView
        android:id="@+id/usernameProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/usernameProfileText"
        app:layout_constraintTop_toBottomOf="@+id/userIDProfileView" />

    <TextView
        android:id="@+id/emailProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/emailProfileText"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfileView" />

    <TextView
        android:id="@+id/phoneProfileView"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/phoneProfileText"
        app:layout_constraintTop_toBottomOf="@+id/emailProfileView" />

    <TextView
        android:id="@+id/otherInfoProfileView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
...
