<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#990000"
    android:backgroundTint="#990000"
    tools:context=".ui.shared.SetDueFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:text="Set Due Time"
        android:textAlignment="center"
        android:textColor="#FFCC00"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dueTimeEventPicker"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:id="@+id/datePickText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Date"
            android:textAlignment="center"
            android:textColor="#FFCC00"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <DatePicker
            android:id="@+id/dateDuePicker"
            android:layout_width="match_parent"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_height="200dp"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/timePickText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Time"
            android:textAlignment="center"
            android:textColor="#FFCC00"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePicker" />

        <TimePicker
            android:id="@+id/timeDuePicker"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:timePickerMode="spinner"
            android:background="@color/white"
            />

    </LinearLayout>

    <Button
        android:id="@+id/dateTimeDueSet"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFCC00"
        android:text="Set Time"
        android:textAlignment="center"
        android:textColor="#990000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueTimeEventPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>